# wrdice_bindings

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/wrdice_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: wrdice.dart  wrdice_bindings_generated.dart
linux/: CMakeLists.txt
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  battle.c  battle.h  cmake_install.cmake  dice_op.c  main.c  stats.c  stats.h  unit_values.h  vec_op.h  wrdice.c  wrdice.h  wrdice.vcxproj  wrdice.vcxproj.filters  wrdice_library.sln
windows/: CMakeLists.txt
